@@ -1,3 +1,8 @@
+2003-10-01  Casper S. Hornstrup  <chorns@users.sourceforge.net>
+
+	* Makefile: Use $(MAKE) rather than make.
+	Generate .chm file in output directory.
+
 2002-11-05  Casper S. Hornstrup  <chorns@users.sourceforge.net>
 
 	* ChangeLog: Added.
